src/pages/UxUiProjects/UxUiProjects.scss
@import '../../constants/colours.scss';

.ux-ui-projects {
    row-gap: 0.25rem;
    flex-direction: column;  
    background-color: $background-color;
    position: relative;

    .div {
        color: $body-text-color;
    }
}

.ux-ui-projects-body {
    display: grid;
    padding: 2% 8%;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: auto;
    gap: 1.5rem 1.5rem
}

@media only screen and (max-width: 1166px) and (min-width: 808px) {
    .ux-ui-projects-body {
        display: grid;
        padding: 2% 8%;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: auto;
        gap: 1.5rem 1.5rem
    }
}

@media only screen and (max-width: 808px) {
    .ux-ui-projects-body {
        display: grid;
        padding: 2% 8%;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        gap: 1.5rem 1.5rem
    }
}

.project-card {
    display: flex;
    align-items: center;
    justify-content: center;
    filter: drop-shadow(0rem 0.25rem 1.25rem rgba(0, 0, 0, 0.1));
    width: 20.125rem;
    height: 22.5625rem;
    background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0.52) 100%);
    box-shadow: 0rem 0.8125rem 1rem rgba(0, 0, 0, 0.1);
    border-radius: 5rem 0rem;
    overflow: hidden;
}

@media only screen and (max-width: 440px) {
    .project-card {
        width: 15.125rem;
        height: 17.5625rem;
    }
}

.project-card-image {
    filter: drop-shadow(0rem 0.25rem 1.25rem rgba(0, 0, 0, 0.1));
    max-width: 20.125rem;
    max-height: 22.5625rem;
    background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0.52) 100%);
    box-shadow: 0rem 0.8125rem 1rem rgba(0, 0, 0, 0.1);
    position: relative;
    z-index:-1;
    width: 20.125rem;
    height: 22.5625rem;
}

.project-card-content {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    row-gap: 2rem;
    position: absolute;
    background: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0.52) 100%);
}

.project-card-title {
    font-size: 1.75rem;
    color: #FFDA00;
    display: flex;
    align-items: center;
    justify-content: center;
}

.project-card-button {
    width: 8.625rem;
    height: 2rem;
    background: #FFDA00;
    border-radius: 0.25rem;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 500;
    font-size: 0.75rem;
    color: #323232;
    cursor: pointer;
}

.projects-concave-top-border {
    height: 6rem;
    width: 100%;
    background: $alternate-body-text-color;
    border-bottom-left-radius: 50%;
    border-bottom-right-radius: 50%;
}

.projects-concave-bottom-border {
    height: 6rem;
    width: 100%;
    background: $alternate-body-text-color;
    border-top-left-radius: 50%;
    border-top-right-radius: 50%;
}

.projects-ellipse-container {
    position: absolute;
}

.projects-ellipse {
    width: 10rem;
    height: 10rem;
}

.projects-dots {
    width: 12.5rem;
    height: 12.5rem;
}

.projects-ellipse-dot-quote-container {
    flex-direction: row;
}

.projects-ellipse-dot-float-right {
    display: flex;
    justify-content: flex-end;
}

.projects-ellipse-dot-quote-container-end {
    flex-direction: column;
}

.count-cards-container {
    display: flex;
    padding: 2% 10%;
    background: linear-gradient(to bottom, transparent 50%, $background-color 50%);
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
}

.brand-list-container {
    display: flex;
    padding: 2% 10%;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
}

.brand{
    width: 5rem;
    height: 5rem;
}

.brands-container {
    display: flex;
    padding: 2% 0%;
    background-color: $background-color;
    flex-direction: column;
}

.brand-list-title {
    display: flex;
    align-items: center;
    justify-content: space-around;
    font-size: 1.5rem;
    color: rgba(69, 88, 128, 0.5);
}

